syntax = "proto3";

package api.blog.v1;

option go_package = "kratos-blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

import "google/api/annotations.proto";



service Auth {
    rpc Register (RegisterReq) returns (RegisterReply) {
        option (google.api.http) = {
            post: "/v1/register"
            body: "*"
        };
    }

    rpc Login (LoginReq) returns (LoginReply) {
        option (google.api.http) = {
            post: "/v1/login"
            body: "*"
        };
    }

    rpc Logout (LogoutReq) returns (LogoutReply) {
        option (google.api.http) = {
            post: "/v1/logout"
            body: "*"
        };
    }
}

message RegisterReq {
    string username = 1;
    string password = 2;
}

message RegisterReply {
    int64 id = 1;
}


message LoginReq {
    string username = 1;
    string password = 2;
}

message LoginReply {
    string token = 1;
}

message LogoutReq {

}

message LogoutReply {

}