syntax = "proto3";

package api.blog.v1;

option go_package = "kratos-blog/api/blog/v1;v1";
option java_multiple_files = true;
option java_package = "api.blog.v1";

// import "google/api/annotations.proto";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc VerifyPassword(VerifyPasswordReq) returns (VerifyPasswordReply) {
    }
}

message CreateUserRequest {
	string username = 1;
    string password = 2;
}
message CreateUserReply {
	int64 id = 1;
    string username = 2;
}


message GetUserRequest {
	int64 id = 1;
}
message GetUserReply {
	int64 id = 1;
    string username = 2;
}


message VerifyPasswordReq {
    string username = 1;
    string password = 2;
}

message VerifyPasswordReply {
    bool ok = 1;
    int64 id = 2;
}